Fixed strange spacing of listings on listings page so that everything is properly spaced.

--- a/client/src/components/ListingCard.css
+++ b/client/src/components/ListingCard.css
@@ -1,21 +1,21 @@
 .listing-item {
-    width: 16rem;
+    width: 100%;
     height: 23rem;
     background-color: transparent;
     border-radius: 16px;
-    border-width: 1px;
-    border-color: lightgray;
+    border: 1px solid lightgray;
 
     display: flex;
     flex-direction: column;
 }
 
 .listing-item img {
-    width: 16rem;
+    width: 100%;
     height: 16rem;
     object-fit: cover;
     border-radius: 12px;
     overflow: hidden;
+    display: block;
 }
 
 .listing-descrip {
